# pyproj-gh-updater

./: Cargo.toml  requirements.md
src/: app_manager.rs  config.rs  error.rs  github.rs  main.rs  package_manager.rs  webhook.rs
